# toci_project

./: README.md  pyproject.toml
conf/flow/test_db/test_table/snapshot/query/: query.sql
src/component/pubSub/conf/utils/: create_topic.py  notification_set.py  pubSub_notify.py  subscription.py
src/component/storage_load_conf/conf/utils/: loadStorage.py
src/component/table_creator/conf/utils/: loadTable.py
src/data/application/table_saving/: snapshot.json
src/main/gcp/: main.py
src/main/gcp/utils/: bigquery_connector.py  bigquery_operations.py  cloud_storage_connector.py  cloud_storage_operations.py
src/main/hello_world/: hello.py
src/main/math_function/: square_nr.py
test/testUnit/testComponent/: test_loadStorage.py  test_loadTable.py
test/testUnit/testGcp/: test_bigquery_operations.py  test_cloud_storage_operations.py
test/testUnit/testMath_function/: mathFunciton_test.py
